tests/ui/no_crate_type.stderr
error: malformed `crate_type` attribute input
  --> $DIR/no_crate_type.rs:2:1
   |
LL | #![crate_type]
   | ^^^^^^^^^^^^^^ malformed input
help: must be of the form:
   |
LL | #![crate_type = "bin"]
   |
LL | #![crate_type = "lib"]
   |
LL | #![crate_type = "..."]

